[create-pull-request] automated change

--- a/articles/3.md
+++ b/articles/3.md
@@ -4,7 +4,7 @@
 > Labels: **blog done**  
 > Created: **2017-07-13T02:21:52Z**  
 > Updated: **2017-11-13T09:46:35Z**  
-> Link: <https://github.com/ninehills/blog/issues/3>  
+> Link and comments: <https://github.com/ninehills/blog/issues/3>  
 
 
 背景：Docker on Mac 长时间运行后，Docker.qcow2就会变得很大，需要压缩
