--- a/articles/63.md
+++ b/articles/63.md
@@ -4,7 +4,7 @@
 > Labels: **blog done**  
 > Created: **2018-06-02T04:54:54Z**  
 > Updated: **2018-06-06T13:21:11Z**  
-> Link: <https://github.com/ninehills/blog/issues/63>  
+> Link and comments: <https://github.com/ninehills/blog/issues/63>  
 
 
 [SREcon18 Americas](https://www.usenix.org/conference/srecon18americas) 最近放出了视频资料，我整理后，觉得值得看的 Talk 如下：
