--- a/articles/72.md
+++ b/articles/72.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2019-11-27T06:39:00Z**  
 > Updated: **2019-11-27T06:39:00Z**  
-> Link: <https://github.com/ninehills/blog/issues/72>  
+> Link and comments: <https://github.com/ninehills/blog/issues/72>  
 
 
 ## 前沿进展
