--- a/articles/73.md
+++ b/articles/73.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2019-12-22T05:18:04Z**  
 > Updated: **2019-12-22T05:19:33Z**  
-> Link: <https://github.com/ninehills/blog/issues/73>  
+> Link and comments: <https://github.com/ninehills/blog/issues/73>  
 
 
 # SRE 技术简报 20191222
