--- a/articles/74.md
+++ b/articles/74.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2020-01-14T03:49:09Z**  
 > Updated: **2020-01-15T04:38:09Z**  
-> Link: <https://github.com/ninehills/blog/issues/74>  
+> Link and comments: <https://github.com/ninehills/blog/issues/74>  
 
 
 ### 前沿进展
