--- a/articles/75.md
+++ b/articles/75.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2020-01-14T04:01:38Z**  
 > Updated: **2020-01-14T04:01:38Z**  
-> Link: <https://github.com/ninehills/blog/issues/75>  
+> Link and comments: <https://github.com/ninehills/blog/issues/75>  
 
 
 《天命奇御》是台湾一家地产商开发的传统武侠游戏，用两周时间花了30个小时通关了主线剧情，从几个方面聊一聊优缺点。
