--- a/articles/76.md
+++ b/articles/76.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2020-03-20T02:35:48Z**  
 > Updated: **2020-03-20T02:35:48Z**  
-> Link: <https://github.com/ninehills/blog/issues/76>  
+> Link and comments: <https://github.com/ninehills/blog/issues/76>  
 
 
 # SRE 技术简报 20200310
