--- a/articles/77.md
+++ b/articles/77.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2020-04-10T04:22:00Z**  
 > Updated: **2020-05-07T08:55:29Z**  
-> Link: <https://github.com/ninehills/blog/issues/77>  
+> Link and comments: <https://github.com/ninehills/blog/issues/77>  
 
 
 # Kubernetes 基于 Namespace 的物理队列实现
