--- a/articles/78.md
+++ b/articles/78.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2020-05-03T13:33:35Z**  
 > Updated: **2020-05-03T13:50:24Z**  
-> Link: <https://github.com/ninehills/blog/issues/78>  
+> Link and comments: <https://github.com/ninehills/blog/issues/78>  
 
 
 ## 0x00 为啥想玩这个？
