--- a/articles/88.md
+++ b/articles/88.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2022-01-29T14:22:52Z**  
 > Updated: **2022-11-14T14:26:20Z**  
-> Link: <https://github.com/ninehills/blog/issues/88>  
+> Link and comments: <https://github.com/ninehills/blog/issues/88>  
 
 
 # p2pfile - Simple P2P file distribution CLI
