--- a/articles/92.md
+++ b/articles/92.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2023-05-12T06:49:26Z**  
 > Updated: **2023-06-22T09:05:20Z**  
-> Link: <https://github.com/ninehills/blog/issues/92>  
+> Link and comments: <https://github.com/ninehills/blog/issues/92>  
 
 
 > 注：本文大段摘抄自 [^2]
