--- a/articles/95.md
+++ b/articles/95.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2023-06-26T14:10:46Z**  
 > Updated: **2023-06-27T06:42:31Z**  
-> Link: <https://github.com/ninehills/blog/issues/95>  
+> Link and comments: <https://github.com/ninehills/blog/issues/95>  
 
 
 本文是对 LLM 进行微调以及二次预训练时，阅读数据训练相关文章的一些学习笔记，包含极少的经验总结。
