--- a/articles/96.md
+++ b/articles/96.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2023-06-27T06:30:11Z**  
 > Updated: **2023-06-27T14:18:25Z**  
-> Link: <https://github.com/ninehills/blog/issues/96>  
+> Link and comments: <https://github.com/ninehills/blog/issues/96>  
 
 
 最近 C-Eval 有较多中文开源模型打榜，分数一度超越 GPT-4，今天做一下简单的复盘。
