--- a/articles/97.md
+++ b/articles/97.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2023-06-27T13:42:33Z**  
 > Updated: **2023-06-28T01:23:22Z**  
-> Link: <https://github.com/ninehills/blog/issues/97>  
+> Link and comments: <https://github.com/ninehills/blog/issues/97>  
 
 
 ## 0x00 学习路径
