--- a/articles/62.md
+++ b/articles/62.md
@@ -4,7 +4,7 @@
 > Labels: **blog done**  
 > Created: **2018-02-28T09:36:26Z**  
 > Updated: **2019-02-15T06:44:39Z**  
-> Link: <https://github.com/ninehills/blog/issues/62>  
+> Link and comments: <https://github.com/ninehills/blog/issues/62>  
 
 
 # Raft struct 的成员
