--- a/articles/94.md
+++ b/articles/94.md
@@ -4,7 +4,7 @@
 > Labels: **blog**  
 > Created: **2023-06-21T06:15:49Z**  
 > Updated: **2023-06-25T14:10:59Z**  
-> Link: <https://github.com/ninehills/blog/issues/94>  
+> Link and comments: <https://github.com/ninehills/blog/issues/94>  
 
 
 > Updated  
