[create-pull-request] automated change

--- a/articles/97.md
+++ b/articles/97.md
@@ -36,8 +36,8 @@
 > 在入门之前，请申请 OpenAI API，并具备良好的国际互联网访问条件。
 
 - [大语言模型综述](https://github.com/RUCAIBox/LLMSurvey)
-  - 大语言模型迄今为止最好的学术向中文综述。
-  - 中文版本：[LLM_Survey_Chinese_0418.pdf](https://github.com/ninehills/blog/files/11913434/LLM_Survey_Chinese_0418.pdf)
+- [大语言模型](https://github.com/LLMBook-zh/LLMBook-zh.github.io)
+  - 大语言模型迄今为止最好的学术向中文综述和书籍
   - 作为入门资料偏难，看不懂的部分可以等到后面章节再回头重看。
 - [ChatGPT Prompt Engineering for Developers](https://learn.deeplearning.ai/chatgpt-prompt-eng/lesson/1/introduction)
   - 虽然是 Prompt 工程，但是内容比较简单，适合入门者。
@@ -51,6 +51,7 @@
 
 ## 0x20 提高篇
 
+- [3brown1blue 系列视频](https://www.youtube.com/watch?v=wjZofJX0v4M)：动画做的很好
 - [清华大模型公开课](https://www.bilibili.com/video/BV1UG411p7zv)：从NLP到大模型的综合课程，挑选感兴趣的了解。
 - [深度学习：台湾大学李宏毅](https://www.bilibili.com/video/BV1J94y1f7u5/)：台湾大学李宏毅，国语教程里最好的，讲的很清楚，也比较有趣。
 - [Understanding large language models](https://www.wandb.courses/courses/take/building-llm-powered-apps/lessons/44341580-understanding-large-language-models) ：理解大语言模型。
